Added example request body to add order existing customer.
