# back-end/microservice-orm-example/docs/swagger_output.json
@@ -90,6 +90,37 @@
           "400": {
             "description": "Bad Request"
           }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "orders": {
+                  "type": "object",
+                  "employee_id": 1,
+                  "order_date": "2023/12/1",
+                  "required_date": "2023/12/1",
+                  "shipped_date": "2023/12/1",
+                  "ship_via": 1,
+                  "freight": 1,
+                  "ship_name": "Hello",
+                  "ship_address": "Hello",
+                  "ship_city": "Hello",
+                  "ship_region": "Hello",
+                  "ship_postal_code": "Hello",
+                  "ship_country": "Hello"
+                },
+                "order_details": {
+                  "type": "object",
+                  "product_id": 1,
+                  "unit_price": 1,
+                  "quantity": 1,
+                  "discount": 1
+                }
+              }
+            }
+          }
         }
       }
     },
