# back-end/microservice-orm-example/v1/controllers/orders-controller.ts
@@ -1,15 +1,18 @@
 import { Request, Response, NextFunction } from "express";
 import { orders, orderDetails, addOrderExistingCustomer, addOrderNewCustomer } from "../../models/orders";
-import { addOrdersExistingCustomerZodSchema, addOrdersNewCustomerZodSchema } from "../../util/schemas/add-orders-zod-schema";
+import {
+  addOrdersExistingCustomerZodSchema,
+  addOrdersNewCustomerZodSchema
+} from "../../util/schemas/add-orders-zod-schema";
 
-export async function getOrders (req: Request, res: Response, next: NextFunction) {
+export async function getOrders(req: Request, res: Response, next: NextFunction) {
   let page = 1;
 
   const isPageNumberInRoute = req.params.page;
-  if(isPageNumberInRoute) page = Number(req.params.page);
+  if (isPageNumberInRoute) page = Number(req.params.page);
 
   const isPageNumberNaN = Number.isNaN(page);
-  if(isPageNumberNaN) {
+  if (isPageNumberNaN) {
     res.status(400).json({
       status: "failed",
       error: "orders/'page' must be a number"
@@ -26,16 +29,16 @@ export async function getOrders (req: Request, res: Response, next: NextFunction
   });
 
   return next();
-};
+}
 
-export async function getOrderDetails (req: Request, res: Response, next: NextFunction) {
+export async function getOrderDetails(req: Request, res: Response, next: NextFunction) {
   let orderId = 0;
 
   const isOrderIdInRoute = req.params.order_id;
-  if(isOrderIdInRoute) orderId = Number(req.params.order_id);
+  if (isOrderIdInRoute) orderId = Number(req.params.order_id);
 
   const isOrderIdNaN = Number.isNaN(orderId);
-  if(isOrderIdNaN) {
+  if (isOrderIdNaN) {
     res.status(400).json({
       status: "failed",
       error: "orders/'order_id' must be a number"
@@ -52,14 +55,14 @@ export async function getOrderDetails (req: Request, res: Response, next: NextFu
   });
 
   return next();
-};
+}
 
-export async function addOrderAddNewCustomer (req: Request, res: Response, next: NextFunction) {
+export async function addOrderAddNewCustomer(req: Request, res: Response, next: NextFunction) {
   try {
     const validRequestBody = await addOrdersNewCustomerZodSchema.parse(req.body);
 
     const data = addOrderNewCustomer(validRequestBody);
-  
+
     res.status(201).json({
       status: "success",
       data: data
@@ -74,14 +77,46 @@ export async function addOrderAddNewCustomer (req: Request, res: Response, next:
 
     return next();
   }
-};
+}
 
-export async function addOrderAddExistingCustomer (req: Request, res: Response, next: NextFunction) {
+export async function addOrderAddExistingCustomer(req: Request, res: Response, next: NextFunction) {
+  /*  #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    example: {
+                      orders: {
+                        type: "object",
+                        employee_id: 1,
+                        order_date: "2023/12/1",
+                        required_date: "2023/12/1",
+                        shipped_date: "2023/12/1",
+                        ship_via: 1,
+                        freight: 1,
+                        ship_name: "Hello",
+                        ship_address: "Hello",
+                        ship_city: "Hello",
+                        ship_region: "Hello",
+                        ship_postal_code: "Hello",
+                        ship_country: "Hello"
+                      },
+                      order_details: {
+                        type: "object",
+                        product_id: 1,
+                        unit_price: 1,
+                        quantity: 1,
+                        discount: 1,
+                      }
+                    }
+                }
+            }
+        } 
+    */
   try {
     const validRequestBody = await addOrdersExistingCustomerZodSchema.parse(req.body);
 
     const data = addOrderExistingCustomer(validRequestBody, req.params.customer_id);
-  
+
     res.status(201).json({
       status: "success",
       data: data
@@ -96,4 +131,4 @@ export async function addOrderAddExistingCustomer (req: Request, res: Response, 
 
     return next();
   }
-};
+}
